frontend/test/should_pass/model_init_002.grg
using model_init2;

rule r1 {

 replace {
	 a : A;
 }
}
